refactoring: code cleanup MCAlfrescoAPIClient